package seedu.address.model.Account.Entry;

public class Expense {
}
