@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR

class ExpenseBook
class UniqueExpenseList
class ObservableList
class Expense
class PieChartData
interface ChartDataCollector <<Interface>>
class GraphicalDisplayWindow UI_COLOR

hide empty members

ExpenseBook --> UniqueExpenseList
UniqueExpenseList *--> ObservableList
ObservableList --> Expense
ChartDataCollector <|.. PieChartData
PieChartData --> ExpenseBook
GraphicalDisplayWindow -[UI_COLOR]-> ChartDataCollector

@enduml
